[package]
name = "snarkos"
version = "3.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Attention - Change the MSRV in rust-toolchain and in .circleci/config.yml as well

[workspace]
members = [
  "account",
  "cli",
  "display",
  "node",
  "node/bft",
  "node/bft/events",
  "node/bft/ledger-service",
  "node/bft/storage-service",
  "node/cdn",
  "node/consensus",
  "node/metrics",
  "node/rest",
  "node/router",
  "node/router/messages",
  "node/sync",
  "node/sync/communication-service",
  "node/sync/locators",
  "node/tcp",
  ".integration"
]

[workspace.dependencies.aleo-std]
version = "=0.1.24"
default-features = false

[workspace.dependencies.snarkvm] # If this is updated, the rev in `node/rest/Cargo.toml` must be updated as well.
#path = "../snarkVM"
#git = "https://github.com/AleoNet/snarkVM.git"
#rev = "3d42aa0"
version = "=1.0.0"
features = [ "circuit", "console", "rocks" ]

[[bin]]
name = "snarkos"
path = "snarkos/main.rs"

[features]
metrics = [ "snarkos-node-metrics", "snarkos-node/metrics" ]
history = [ "snarkos-node/history" ]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.clap]
version = "4.4"
features = [ "derive" ]

[dependencies.crossterm]
version = "0.27.0"

[dependencies.once_cell]
version = "1"

[dependencies.snarkos-account]
path = "./account"
version = "=3.0.0"

[dependencies.snarkos-cli]
path = "./cli"
version = "=3.0.0"

[dependencies.snarkos-display]
path = "./display"
version = "=3.0.0"

[dependencies.snarkos-node]
path = "./node"
version = "=3.0.0"

[dependencies.snarkos-node-bft]
path = "./node/bft"
version = "=3.0.0"

[dependencies.snarkos-node-cdn]
path = "./node/cdn"
version = "=3.0.0"

[dependencies.snarkos-node-consensus]
path = "./node/consensus"
version = "=3.0.0"

[dependencies.snarkos-node-metrics]
path = "./node/metrics"
version = "=3.0.0"
optional = true

[dependencies.snarkos-node-rest]
path = "./node/rest"
version = "=3.0.0"

[dependencies.snarkos-node-router]
path = "./node/router"
version = "=3.0.0"

[dependencies.snarkos-node-sync]
path = "./node/sync"
version = "=3.0.0"

[dependencies.snarkos-node-tcp]
path = "./node/tcp"
version = "=3.0.0"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies.rusty-hook]
version = "0.11.2"

[build-dependencies.walkdir]
version = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.test]
opt-level = 2
lto = "thin"
incremental = true
debug = true
debug-assertions = true
