[package]
name = "snarkos-crawler"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[features]
postgres = [ "tokio-postgres" ]
postgres-tls = [ "native-tls", "postgres", "postgres-native-tls" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1"

[dependencies.async-trait]
version = "0.1"

[dependencies.bincode]
version = "1"

[dependencies.bytes]
version = "1"

[dependencies.clap]
version = "3.2"
features = [ "derive" ]

[dependencies.nalgebra]
version = "0.31"

[dependencies.native-tls]
version = "0.2"
optional = true

[dependencies.parking_lot]
version = "0.12"

[dependencies.pea2pea]
version = "0.39"

[dependencies.postgres-native-tls]
version = "0.5"
optional = true

[dependencies.rand]
version = "0.8"
features = [ "small_rng" ]

[dependencies.snarkos-environment]
path = "../environment"
version = "2.0.2"

[dependencies.snarkos-metrics]
path = "../metrics"
features = [ "test" ]

[dependencies.snarkos-synthetic-node]
path = "../.synthetic_node"
version = "2.0.2"

[dependencies.snarkvm]
version = "0.8.0"

[dependencies.time]
version = "0.3"
features = ["local-offset"]

[dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread" ]

[dependencies.tokio-postgres]
version = "0.7"
features = [ "with-time-0_3" ]
optional = true

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.snarkos-integration]
path = "../.integration"
version = "2.0.2"

[dev-dependencies.tracing-subscriber]
version = "0.3"
