[package]
name = "snarkos-integration"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[features]
test = [ "anyhow", "clap", "snarkos", "peak_alloc", "snarkos-metrics", "tracing-subscriber" ]

[dev-dependencies.snarkos-integration]
path = "."
features = [ "test" ] # a workaround to use the `test` feature in tests by default

[dependencies.anyhow]
version = "1"
optional = true

[dependencies.async-trait]
version = "0.1"

[dependencies.pea2pea]
version = "0.39"

[dependencies.peak_alloc]
version = "0.1"
optional = true

[dependencies.snarkos]
path = ".."
version = "2.0.2"
optional = true
features = [ "test" ]

[dependencies.snarkos-environment]
path = "../environment"
version = "2.0.2"

[dependencies.snarkos-metrics]
path = "../metrics"
features = [ "test" ]
optional = true

[dependencies.snarkos-synthetic-node]
path = "../.synthetic_node"
version = "2.0.2"

[dependencies.snarkvm]
version = "0.8.0"

[dependencies.clap]
version = "3.1"
features = [ "derive" ]
optional = true

[dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread", "time" ]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "parking_lot" ]
optional = true
