[package]
name = "snarkos-integration"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A integration testing suite for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[dev-dependencies.aleo-std]
workspace = true

[dev-dependencies.snarkos-node-cdn]
path = "../node/cdn"

[dev-dependencies.snarkvm]
workspace = true
features = [ "synthesizer" ]

[dev-dependencies.tokio]
version = "1.28"
features = [ "rt" ]

[dev-dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-test]
version = "0.1"
