[package]
name = "snarkos-synthetic-node"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-trait]
version = "0.1"

[dependencies.futures-util]
version = "0.3"

[dependencies.parking_lot]
version = "0.12"

[dependencies.pea2pea]
version = "0.40"

[dependencies.rand]
version = "0.8"

[dependencies.snarkos-environment]
path = "../environment"
version = "2.0.2"
features = [ "network" ]

[dependencies.snarkvm]
version = "0.8.0"

[dependencies.tokio]
version = "1"

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter" ]


