[package]
name = "snarkos-account"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Account for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.anyhow]
version = "1"

[dependencies.colored]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.snarkvm]
workspace = true
default-features = false
features = [ "console" ]
