[package]
name = "snarkos-account"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Account for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.colored]
version = "2"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.snarkvm]
workspace = true
features = [ "console" ]
