[package]
name = "snarkos-algorithms"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Algorithms for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[example]]
name = "gm17"
path = "examples/snark/gm17.rs"
required-features = ["rand", "snarkos-curves/bls12_377", "snarkos-models/gadgets"]

[dependencies]
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false }
snarkos-models = { path = "../models", version = "0.8.0", default-features = false }
snarkos-profiler = { path = "../profiler", version = "0.8.0" }
snarkos-utilities = { path = "../utilities", version = "0.8.0", default-features = false }

blake2 = { version = "0.8.1" }
derivative = { version = "2" }
digest = { version = "0.8.1" }
rand = { version = "0.7" }
rand_chacha = { version = "0.2.2" }
rayon = { version = "1" }
sha2 = { version = "0.9" }
smallvec = { version = "1.4" }

[dev-dependencies]
snarkos-curves = { path = "../curves", version = "0.8.0" }

criterion = { version = "0.3.1" }
csv = { version = "1" }
rand_xorshift = { version = "0.2" }

[features]
default = [ "pedersen-parallel", "snarkos-errors/default", "snarkos-models/default", "snarkos-utilities/default", ]
pedersen-parallel = []
print-trace = [ "snarkos-profiler/print-trace" ]
