[package]
name = "snarkos-benchmarks"
version = "1.3.11"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Benchmarks for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "syncing"
path = "syncing/syncing.rs"
harness = false

[[bench]]
name = "merkle"
path = "merkle/merkle.rs"
harness = false

[[bench]]
name = "network"
path = "network/network.rs"
harness = false

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkvm-dpc]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkvm-parameters]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkvm-posw]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.snarkos-profiler]
path = "../profiler"
version = "1.3.11"

[dependencies.snarkos-network]
path = "../network"
version = "1.3.11"

[dependencies.snarkos-testing]
path = "../testing"
version = "1.3.11"

[dependencies.csv]
version = "1"

[dependencies.derivative]
version = "2"

[dependencies.digest]
version = "0.7"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.smallvec]
version = "1.6"

[dependencies.criterion]
version = "0.3.4"
features = [ "async_tokio" ]

[dependencies.rand_xorshift]
version = "0.3"

[dependencies.tokio]
version = "1"
