[package]
name = "snarkos-benchmarks"
version = "1.3.14"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Benchmarks for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "merkle"
path = "merkle/merkle.rs"
harness = false

[[bench]]
name = "block_cache"
path = "network/block_cache.rs"
harness = false

[[bench]]
name = "messaging"
path = "network/messaging.rs"
harness = false

[[bench]]
name = "syncing"
path = "network/syncing.rs"
harness = false

[[bench]]
name = "network_metrics"
path = "network/network_metrics.rs"
harness = false

[[bench]]
name = "hasher_hash"
path = "network/hasher_hash.rs"
harness = false

[dependencies.snarkvm-algorithms]
version = "=0.7.9"

[dependencies.snarkvm-curves]
version = "=0.7.9"

[dependencies.snarkvm-dpc]
version = "=0.7.9"

[dependencies.snarkvm-parameters]
version = "=0.7.9"

[dependencies.snarkvm-posw]
version = "=0.7.9"

[dependencies.snarkvm-utilities]
version = "=0.7.9"

[dependencies.snarkos-profiler]
path = "../profiler"
version = "1.3.14"

[dependencies.snarkos-network]
path = "../network"
version = "1.3.14"

[dependencies.snarkos-testing]
path = "../testing"
version = "1.3.14"

[dependencies.csv]
version = "1"

[dependencies.derivative]
version = "2"

[dependencies.digest]
version = "0.7"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.smallvec]
version = "1.6"

[dependencies.criterion]
version = "0.3.4"
features = [ "async_tokio" ]

[dependencies.rand_xorshift]
version = "0.3"

[dependencies.tokio]
version = "1"

[dependencies.itertools]
version = "0.10"

[dependencies.hash_hasher]
version = "2.0.3"
