[package]
name = "snarkos-consensus"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The consensus protocol for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

# TODO: remove
[workspace]
members = ["."]
