[package]
name = "snarkos-consensus"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The consensus protocol for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[features]
test = [ ]

[dependencies.snarkvm]
path = "../../snarkVM"
#git = "https://github.com/AleoHQ/snarkVM.git"
#branch = "testnet3"
features = ["console", "utilities"]

[dependencies.anyhow]
version = "1"

[dependencies.fixed]
version = "1.15"

[dependencies.indexmap]
version = "1.8"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1"
features = [ "macros", "rt", "sync" ]

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-subscriber]
version = "0.3"

[dev-dependencies.snarkos-consensus]
path = "."
features = [ "test" ]
