[package]
name = "snarkos-console"
version = "0.8.0"
authors = ["Michael Beller", "Collin Chin", "Raymond Chu", "Matthew Green", "Ian Miers", "Howard Wu"]
description = "Console for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
clap = { version = "2.33.0" }
failure = { version = "0.1.7" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.50" }
tokio = { version = "0.2", features = ["full"] }
