[package]
name = "snarkos-console"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Console for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
clap = { version = "2.33.1" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.55" }
thiserror = { version = "1.0" }
tokio = { version = "0.2.13", features = ["full"] }
