[package]
name = "snarkos-curves"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Curves for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false }
snarkos-models = { path = "../models", version = "0.8.0", default-features = false, features = ["curves"] }
snarkos-utilities = { path = "../utilities", version = "0.8.0" }

derivative = { version = "1" }
rand = { version = "0.7", default-features = false }

[dev-dependencies]
rand_xorshift = { version = "0.2", default-features = false }

#
# Each module in `snarkos-curves` is guarded by a feature flag to minimize compilation resources.
# To include any one of the modules in `snarkos-curves`, simply include its corresponding feature flag.
#
# For example, to include bls12_377 in `snarkos-gadgets`, add the "bls12_377" feature as follows:
# snarkos-curves = { version = "x.x.x", default-features = false, features = ["bls12_377"] }
#
[features]
default = []
bls12_377 = ["templates"]
edwards_bls12 = ["bls12_377"]
edwards_sw6 = ["sw6"]
sw6 = ["bls12_377", "templates"]
templates = []
