[package]
name = "snarkos-curves"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Curves for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-errors = { path = "../errors", version = "0.8.0" }
snarkos-models = { path = "../models", version = "0.8.0" }
snarkos-utilities = { path = "../utilities", version = "0.8.0" }

derivative = { version = "2" }
rand = { version = "0.7", default-features = false }

[dev-dependencies]
rand_xorshift = { version = "0.2", default-features = false }
