[package]
name = "snarkos-curves"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Curves for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-errors = { path = "../errors", version = "1.1.4", default-features = false }
snarkos-models = { path = "../models", version = "1.1.4", default-features = false }
snarkos-utilities = { path = "../utilities", version = "1.1.4"} # TODO: Add default-features=false back in.

derivative = { version = "2" }
rand = { version = "0.7" }
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
rand_xorshift = { version = "0.2", default-features = false }

[features]
default = ["snarkos-errors/default", "snarkos-models/default", "snarkos-utilities/default"]
sw6 = []

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "curve_and_field_benches"
harness = false
